@@ -22,6 +22,9 @@ Bug fixes:
 - Enabling verbose output in ~magit-commit-absorb~ caused an error.
   #5272
 
+- In logs, no longer strip ~heads/~ prefix from branch names if a tag
+  with the same name exists.
+
 * v4.1.3    2024-12-06
 
 - For most important sections, if an error occurs while inserting the
